# Clinic_Analysis_Project

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: feedback-loop.md
infra/draft/: README.md  main.tf  outputs.tf  terraform.tfvars.example  user-data.sh  variables.tf
scripts/: setup_kanban.sh
smartemis/: __init__.py  config.py  storage.py
smartemis/analytics/: __init__.py  kpis.py
smartemis/api/: main.py  pipeline.py  schemas.py
smartemis/export/: __init__.py  charts.py  pdf.py
smartemis/feedback/: __init__.py  models.py  store.py
smartemis/ingest/: __init__.py  base.py  csv_source.py  qlik_source.py
smartemis/pii/: __init__.py  pseudonymize.py  vault.py
smartemis/reports/: __init__.py  generator.py  prompts.py
smartemis/ui/static/: app.js  index.html  reporting-landing-mockup.html  style.css
synthetic_data/: generate.py
