[project]
name = "smartemis-agent"
version = "0.1.0"
description = "Smartemis vet-clinic financial analysis + Claude Sonnet 4.6 report drafting with RLHF-lite feedback loop. GDPR-compliant (EU data residency via AWS Frankfurt + Bedrock)."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "pandas>=2.2",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "anthropic[bedrock]>=0.39",
    "boto3>=1.35",
    "python-dotenv>=1.0",
    "jinja2>=3.1",
    "httpx>=0.27",
    "reportlab>=4.2",
    "matplotlib>=3.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "mypy>=1.13",
    "faker>=30.0",
]
postgres = [
    "psycopg[binary]>=3.2",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["smartemis*"]
exclude = ["agent*", "tests*", "synthetic_data*", "infra*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
